--- a/index.html
+++ b/index.html
@@ -461,7 +461,7 @@ button{background:#e74c3c;color:#fff;font-weight:700}
 </div>
 
 <script>
-const WEBAPP_URL="PASTE_YOUR_DEPLOYED_WEBAPP_URLhttps://script.google.com/macros/s/AKfycbxe6yV6nVEHPMw2KjpIhTEe6r4RGlA_mNPAOMoUWRltNvKNTBjNSpw7XRGQNdjAjGF8fg/exec";
+const WEBAPP_URL="https://script.google.com/macros/s/AKfycbxe6yV6nVEHPMw2KjpIhTEe6r4RGlA_mNPAOMoUWRltNvKNTBjNSpw7XRGQNdjAjGF8fg/exec";
 
 function save(){
  fetch(WEBAPP_URL+"?"+new URLSearchParams({
